--- a/resources/splashscreen.html
+++ b/resources/splashscreen.html
@@ -16,10 +16,11 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12">
-                    <div class="d-flex justify-content-center">
-                        <div class="spinner-border text-primary" role="status">
-                            <span class="visually-hidden">Loading...</span>
+                <div class="col-12 d-flex justify-content-center">
+                    <div style="width: 300px; height: 30px;">
+                        <div class="progress" role="progressbar" aria-label="Basic example">
+                            <div id="progress-bar" class="progress-bar" style="width: 0%; background-color: #5FB2FF;">
+                            </div>
                         </div>
                     </div>
                 </div>
