Splashscreen flashing text

--- a/resources/splashscreen.html
+++ b/resources/splashscreen.html
@@ -20,6 +20,7 @@
                     <div style="width: 300px; height: 30px;">
                         <div class="progress" role="progressbar" aria-label="Basic example">
                             <div id="progress-bar" class="progress-bar" style="width: 0%; background-color: #5FB2FF;">
+                                <span id="progress-bar-text" class="flashing-text"></span>
                             </div>
                         </div>
                     </div>
