profile/settings dropdown

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -5,7 +5,7 @@
     <title>Dynamic Computer</title>
     <meta
       http-equiv="Content-Security-Policy"
-      content="default-src 'self'; connect-src 'self' https://jawhxzzywxskecwjsanf.supabase.co/; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' data:"
+      content="default-src 'self'; connect-src 'self' https://jawhxzzywxskecwjsanf.supabase.co/; script-src 'self'; style-src 'self' 'unsafe-inline'; img-src 'self' https://avatars.githubusercontent.com/ data:"
     />
   </head>
 
